# chapa

./: Cargo.toml  README.md
chapa/: Cargo.toml
chapa-macros/: Cargo.toml
chapa-macros/src/: bit_enum.rs  codegen.rs  lib.rs  model.rs  ordering.rs  parse.rs  validate.rs
chapa/src/: lib.rs  mask.rs
chapa/tests/: test_aliases.rs  test_arith.rs  test_auto_derive.rs  test_bit_enum.rs  test_bitwise.rs  test_bytes.rs  test_const.rs  test_debug.rs  test_default.rs  test_extract_bits.rs  test_insert_bits.rs  test_lsb0.rs  test_msb0.rs  test_nested.rs  test_place_bits.rs  test_readonly.rs  test_reflection.rs  test_signed.rs  test_width.rs
