[package]
name = "chapa-macros"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for the chapa bitfield library"
license = "MIT"
authors = ["Luca Marcelli <contact@layle.dev>"]
repository = "https://github.com/ioncodes/chapa"
homepage = "https://github.com/ioncodes/chapa"
documentation = "https://docs.rs/chapa-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
