[package]
name = "chapa"
version = "0.1.2"
edition = "2021"
description = "Bitfield structs, batteries included!"
license = "MIT"
authors = ["Luca Marcelli <contact@layle.dev>"]
repository = "https://github.com/ioncodes/chapa"
homepage = "https://github.com/ioncodes/chapa"
documentation = "https://docs.rs/chapa"
keywords = ["bitfield", "bit-manipulation", "msb0", "lsb0"]
readme = "../README.md"

[dependencies]
chapa-macros = { version = "0.1", path = "../chapa-macros" }

[dev-dependencies]
trybuild = "1"
