[package]
name = "chapa"
version = "0.5.0"
edition = "2021"
rust-version = "1.83"
description = "Bitfield structs, batteries included!"
license = "MIT"
authors = ["Luca Marcelli <contact@layle.dev>"]
repository = "https://github.com/ioncodes/chapa"
homepage = "https://github.com/ioncodes/chapa"
documentation = "https://docs.rs/chapa"
keywords = ["bitfield", "bit-manipulation", "msb0", "lsb0"]
readme = "../README.md"

[features]
reflection = ["chapa-macros/reflection"]

[dependencies]
chapa-macros = { version = "0.5", path = "../chapa-macros" }

[dev-dependencies]
trybuild = "1"

[package.metadata.docs.rs]
all-features = true
